--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
     <div class="card">
         <div class="search">
             <input type="text"  placeholder="Enter city name" spellcheck="false">
-            <button><img src="img/src.png"></button>
+            <button><img src="src.png"></button>
         </div>
         <div class="error">
             <p>Wrong city name</p>
         </div>
         <div class="weather">
-            <img src="img/rain2.png" class="weather-icon">
+            <img src="rain2.png" class="weather-icon">
             <h1 class="temp">22°C</h1>
             <h2 class="city">New York</h2>
             <div class="details">
                 <div class="col">
-                    <img src="img/humidity.png">
+                    <img src="humidity.png">
                   
                 <p class="humidity">50%</p>
                 <p>Humidity</p>
             </div>
         <div class="col">
-            <img src="img/windy.png">
+            <img src="windy.png">
         <p class="wind">15 km/h</p>
         <p>Wind Speed</p>
         </div>
