--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="card">
         <div class="search">
             <input type="text"  placeholder="Enter city name" spellcheck="false">
-            <button><img src="src.png"></button>
+            <button><img src="https://github.com/AtrayeePaul/weather_app/blob/main/src.png"></button>
         </div>
         <div class="error">
             <p>Wrong city name</p>
